syntax = "proto3";

package grpc_login_history;

import "common.proto";

service GrpcLoginHistoryService {
  rpc GetListLoginHistory (DataLoginHistoryFilter) returns (ListLoginHistoryResponse);
};

message ListLoginHistoryResponse {
  repeated UserHistoryLogin data = 1;
  common.PaginationMeta pagination = 2;
}

message UserHistoryLogin {
  string email = 1;
  string created_at = 2;
  string ip = 3;
  string browser = 4;
  string os = 5;
}

message DataLoginHistoryFilter {
  int32 page = 1;
  int32 per_page = 2;
  string from_time = 3;
  string to_time = 4;
  string search_field = 5;
  string search_text = 6;
  string sort = 7;
  string sort_type = 8;
}
